--- a/src/views/models/StructureView/Field.scss
+++ b/src/views/models/StructureView/Field.scss
@@ -1,6 +1,10 @@
 @import '~styles/variables';
 @import '~styles/mixins';
 
+.root {
+
+}
+
 .row {
   border-bottom: 1px solid $grey2;
   padding: 24px 40px;
