--- a/src/views/models/StructureView/PermissionType.scss
+++ b/src/views/models/StructureView/PermissionType.scss
@@ -1,27 +1,16 @@
+@import '~styles/variables';
+
 .root {
   display: inline-block;
+  height: 100%;
 }
 
 .container {
   background: #fff;
-  border: 1px solid #D4D8E7;
-  height: 35px;
+  border: 1px solid $grey2;
+  height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 12px;
-
-  select {
-    background: none;
-    border: 0;
-
-    &:focus {
-      outline: none;
-    }
-  }
-
-  input[type=checkbox] {
-    margin: 0 5px 0 20px;
-  }
 
   input[type=text] {
     margin-left: 20px;
@@ -32,4 +21,59 @@
       outline: none;
     }
   }
+}
+
+.userType {
+  background: none;
+  border: 0;
+  margin: 0 5px;
+  //appearance: none;
+  color: $grey5;
+  width: 130px;
+  height: 100%;
+  padding: 0 15px;
+  font-size: 14px;
+  margin: 0 15px;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.authenticated {
+  height: 100%;
+  border-left: 1px solid $grey2;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  color: $grey4;
+  padding: 0 20px 0 10px;
+  cursor: pointer;
+  white-space: nowrap;
+
+  &.inactive {
+    opacity: 0.4;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  input[type=checkbox] {
+    margin: 0 8px;
+  }
+
+  select {
+    background: none;
+    border: 0;
+    margin: 0 5px;
+    appearance: none;
+    font-weight: 600;
+    color: $grey5;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
 }
