--- a/src/views/models/StructureView/FieldRow.scss
+++ b/src/views/models/StructureView/FieldRow.scss
@@ -7,8 +7,10 @@
 
 .row {
   border-bottom: 1px solid $grey2;
-  padding: 24px 40px;
+  padding: 0 40px;
+  height: 76px;
   display: flex;
+  align-items: center;
 
   &:hover {
     background: $grey1;
@@ -24,6 +26,10 @@
     .controls span {
       visibility: visible;
     }
+  }
+
+  &.active {
+    background: $grey1;
   }
 }
 
@@ -90,13 +96,28 @@
 
 .constraints {
   width: 208px;
+  height: 100%;
+  position: relative;
 }
 
 .permissions {
+  height: 100%;
   width: 208px;
   position: relative;
+}
 
-  .permission {
+.constraints, .permissions {
+  &.active:after {
+    content: '';
+    width: 100%;
+    height: 3px;
+    position: absolute;
+    background: $accent-shade;
+    left: -5%;
+    bottom: -1px;
+  }
+
+  .label {
     text-transform: uppercase;
     font-size: 11px;
     font-weight: 300;
