--- a/src/views/models/BrowserView/CheckboxCell.scss
+++ b/src/views/models/BrowserView/CheckboxCell.scss
@@ -7,6 +7,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 34px;
+  flex: 0 0 34px;
   cursor: pointer;
 }
