--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -6,7 +6,7 @@
   z-index: 9;
   font-size: 12px;
   color: $grey5;
-  overflow: hidden;
+  //overflow: hidden;
   display: flex;
   height: 47px;
   position: relative;
@@ -18,6 +18,8 @@
     padding: 15px 20px;
     display: inline-block;
     white-space: nowrap;
+    display: flex;
+    align-items: center;
   }
 
   input {
@@ -75,6 +77,16 @@
 
     svg {
       fill: $grey3;
+    }
+  }
+
+  .datepicker {
+    width: 100%;
+    height: 100%;
+
+    & > div {
+      width: 100%;
+      @include cellborder($accent-blue);
     }
   }
 }
