--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -6,10 +6,11 @@
   z-index: 9;
   font-size: 12px;
   color: $grey5;
-  //overflow: hidden;
+  overflow: hidden;
   display: flex;
   height: 47px;
   position: relative;
+  text-overflow: ellipsis;
 
   .value {
     text-overflow: ellipsis;
@@ -18,8 +19,7 @@
     padding: 15px 20px;
     display: inline-block;
     white-space: nowrap;
-    display: flex;
-    align-items: center;
+    line-height: 17px;
   }
 
   input {
@@ -81,12 +81,11 @@
   }
 
   .datepicker {
+    position: absolute;
+    min-width: 270px;
     width: 100%;
     height: 100%;
-
-    & > div {
-      width: 100%;
-      @include cellborder($accent-blue);
-    }
+    background: #fff;
+    @include cellborder($accent-blue);
   }
 }
