--- a/src/views/models/BrowserView/HeaderCell.scss
+++ b/src/views/models/BrowserView/HeaderCell.scss
@@ -2,10 +2,12 @@
 @import '~styles/mixins';
 
 .root {
-  padding: 20px;
+  padding: 0 20px;
+  height: 100%;
   @include cellborder($grey2);
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .line {
@@ -20,10 +22,6 @@
 
   svg {
     fill: $grey3;
-
-    &.reverse {
-      transform: rotate(180deg);
-    }
   }
 
   input {
