--- a/src/views/models/BrowserView/Row.scss
+++ b/src/views/models/BrowserView/Row.scss
@@ -1,7 +1,9 @@
 @import '~styles/variables';
+@import '~styles/mixins';
 
 .root {
   display: flex;
+  @include cellborder($grey2);
 
   &:nth-child(2n) {
     background: $blue1;
