--- a/src/views/models/BrowserView/HeaderCell.scss
+++ b/src/views/models/BrowserView/HeaderCell.scss
@@ -53,17 +53,60 @@
     font-size: 11px;
     background: none;
   }
+
+  &:hover {
+    .sort {
+      opacity: 1;
+    }
+  }
 }
 
 .fieldName {
   font-size: 14px;
   font-weight: 600;
   color: $grey4;
+  display: flex;
+  align-items: center;
+  width: 90%;
+
+  &:hover {
+    .type {
+      display: none;
+    }
+
+    .edit {
+      display: inline-block;
+    }
+  }
+
+  .type {
+    font-size: 14px;
+    font-weight: 300;
+    color: $grey3;
+    margin-left: 4px;
+  }
+
+  .edit {
+    padding: 5px;
+    display: none;
+
+    &:hover {
+      svg {
+        fill: $grey4;
+      }
+    }
+
+    svg {
+      fill: $grey3;
+    }
+  }
 }
 
-.type {
-  font-size: 14px;
-  font-weight: 300;
-  color: $grey3;
-  margin-left: 4px;
+.sort {
+  opacity: 0;
+  padding: 10px 0 10px 10px;
+
+  &.active {
+    opacity: 1;
+  }
 }
