--- a/src/components/Help/Help.scss
+++ b/src/components/Help/Help.scss
@@ -1,3 +1,11 @@
-.root {
-  display: flex;
+.container {
+  position: relative;
+  font-size: 13px;
+  font-weight: 400;
+  color: #fff;
+
+  & > div {
+    position: absolute;
+    width: 500px;
+  }
 }
