--- a/src/components/ModelSelector/ModelSelector.scss
+++ b/src/components/ModelSelector/ModelSelector.scss
@@ -1,6 +1,7 @@
 @import '~styles/variables';
 
 .row {
+  cursor: pointer;
   width: 300px;
   font-size: 12px;
   padding: 6px 10px;
@@ -8,4 +9,9 @@
   &.highlighted {
     background: $accent-shade;
   }
+}
+
+.wrapper {
+  width: 100%;
+  position: relative;
 }
