--- a/src/views/models/BrowserView/HeaderCell.scss
+++ b/src/views/models/BrowserView/HeaderCell.scss
@@ -16,10 +16,6 @@
   align-items: center;
   padding: 8px 0;
 
-  &:first-child {
-    cursor: pointer;
-  }
-
   svg {
     fill: $grey3;
   }
@@ -105,6 +101,17 @@
 .sort {
   opacity: 0;
   padding: 10px 0 10px 10px;
+  cursor: pointer;
+
+  &:hover {
+    svg {
+      fill: $grey4;
+    }
+  }
+
+  svg {
+    fill: $grey3;
+  }
 
   &.active {
     opacity: 1;
