--- a/src/views/models/BrowserView/AddFieldCell.scss
+++ b/src/views/models/BrowserView/AddFieldCell.scss
@@ -1,7 +1,10 @@
 @import '~styles/variables';
+@import '~styles/mixins';
 
 .root {
   width: 250px;
+  height: 100%;
+  @include cellborder($grey2);
   display: flex;
   align-items: flex-end;
   padding: 20px;
