refactored more to typescript

--- a/src/components/ProjectSelection/ProjectSelection.scss
+++ b/src/components/ProjectSelection/ProjectSelection.scss
@@ -40,11 +40,14 @@
   }
 
   .title {
-    text-align: center;
+    display: flex;
     width: calc(100% - 100px);
+    height: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    align-items: center;
+    justify-content: center;
   }
 }
 
