--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,10 +3,11 @@
 
 .root {
   width: 100%;
-  height: 100%;
+  height: calc(#{$headerHeight} + 1px);
   display: flex;
   align-items: center;
   position: relative;
+  border-bottom: 1px solid $grey2;
 }
 
 .left {
