--- a/src/views/models/StructureView/StructureView.scss
+++ b/src/views/models/StructureView/StructureView.scss
@@ -6,11 +6,9 @@
 }
 
 .head {
-  height: $headerHeight;
-  background: $grey1;
+  height: calc(#{$headerHeight} + 1px);
   border-top: 1px solid $grey2;
   border-bottom: 1px solid $grey2;
-  padding: 19px 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -18,8 +16,31 @@
 
 .headLeft {
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  height: 100%;
+
+  .tab {
+    height: 100%;
+    color: $grey4;
+    width: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
+    font-weight: 500;
+    text-transform: uppercase;
+
+    &.active {
+      background: $grey2;
+      color: $grey5;
+    }
+  }
+
+  .info {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 12px 30px;
+  }
 
   .title {
     font-weight: 600;
@@ -52,7 +73,6 @@
     font-size: 14px;
     font-weight: 300;
     color: $grey4;
-    margin-top: 5px;
   }
 
   input {
@@ -73,6 +93,7 @@
   align-items: center;
   justify-content: flex-end;
   position: relative;
+  padding-right: 30px;
 
   .button {
     @include button;
