--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,7 @@
 }
 
 .left {
-  width: 70%;
+  width: 100%;
   display: flex;
   align-items: center;
   margin-left: 40px;
@@ -27,7 +27,6 @@
 }
 
 .right {
-  width: 30%;
   color: $grey3;
   display: flex;
   align-items: center;
@@ -35,6 +34,7 @@
   font-size: 14px;
   margin-right: 40px;
   cursor: pointer;
+  white-space: nowrap;
 
   .label {
     cursor: pointer
