--- a/src/views/ActionsView/ActionRow.scss
+++ b/src/views/ActionsView/ActionRow.scss
@@ -2,4 +2,62 @@
 @import '~styles/mixins';
 
 .root {
+  font-size: 17px;
+  color: $newGrey3;
+  padding: 30px 24px;
+  border-bottom: 1px solid $newGrey2;
+
+  input {
+    margin-right: 20px;
+  }
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+
+  & > div {
+    margin-right: 8px;
+  }
+}
+
+.label {
+  border-radius: 4px;
+  overflow: hidden;
+  background: $newGrey2;
+  height: 26px;
+  display: flex;
+
+  & > div {
+    padding: 0 6px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .green {
+    color: #27AE60;
+    background: rgba(184, 233, 134, 0.5);
+  }
+
+  .blue {
+    color: #4A90E2;
+    background: rgba(74, 144, 225, 0.2);
+  }
+}
+
+.delete {
+  margin-left: auto;
+
+  svg {
+    fill: $newGrey3;
+  }
+}
+
+.description {
+  opacity: 0.5;
+  font-size: 14px;
+  width: 100%;
+  padding: 12px 34px 0;
 }
