--- a/src/views/ActionsView/ActionRow.scss
+++ b/src/views/ActionsView/ActionRow.scss
@@ -45,6 +45,11 @@
     color: #4A90E2;
     background: rgba(74, 144, 225, 0.2);
   }
+
+  .red {
+    color: #D0021B;
+    background: rgba(208, 2, 27, 0.2);
+  }
 }
 
 .delete {
