--- a/src/views/ActionsView/ActionsView.scss
+++ b/src/views/ActionsView/ActionsView.scss
@@ -2,4 +2,13 @@
 @import '~styles/mixins';
 
 .root {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding-top: $headerHeight;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
 }
