--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,17 +14,22 @@
 
 .left {
   width: 100%;
+  margin-left: 40px;
+}
+
+.endpoint {
+  position: relative;
   display: flex;
   align-items: center;
-  margin-left: 40px;
-  position: relative;
+  margin-right: 20px;
 
   .item {
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 600;
     color: $grey4;
-    margin-right: 20px;
+    margin-right: 15px;
     cursor: pointer;
+    white-space: nowrap;
   }
 }
 
