--- a/src/views/playground/PlaygroundView/PlaygroundView.scss
+++ b/src/views/playground/PlaygroundView/PlaygroundView.scss
@@ -1,7 +1,10 @@
+@import '~styles/variables';
+
 .root {
   width: 100%;
   height: 100%;
   position: relative;
+  padding-top: $headerHeight;
 }
 
 .historyOverlay {
