--- a/src/views/account/AccountView/AccountView.scss
+++ b/src/views/account/AccountView/AccountView.scss
@@ -1,17 +1,19 @@
 @import '~styles/variables';
 
 .root {
+  width: 100%;
   height: 100%;
+  position: relative;
+  padding-top: $headerHeight;
 }
 
 .head {
-  height: 102px;
+  height: 50px;
   background: $grey1;
   border-top: 1px solid $grey2;
   border-bottom: 1px solid $grey2;
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  align-items: flex-end;
 
   .title {
     margin: 19px 0 0 40px;
