New color scheme

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,10 +12,10 @@ $grey1: #FBFBFB;
 $grey2: #E4E4F4;
 $grey3: #B9B9C8;
 $grey4: #70738C;
-$grey5: #2B3236;
+$grey5: #171A1F;
 $grey6: #192121;
 
 $headerHeight: 66px;
 
-$newGrey3: #8E96A3;
+$newGrey3: #1B1F25;
 $newGrey2: #F3F3F6;
