Even more color scheme update

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,7 @@ $blue4: #A9CCEE;
 $grey1: #FBFBFB;
 $grey2: #E4E4F4;
 $grey3: #B9B9C8;
-$grey4: #70738C;
+$grey4: #5B5F64;
 $grey5: #171A1F;
 $grey6: #192121;
 
