--- a/src/views/ProjectRootView/SideNav.scss
+++ b/src/views/ProjectRootView/SideNav.scss
@@ -8,7 +8,7 @@
   color: #fff;
 
   a {
-    color: #fff;
+    color: $grey3;
   }
 }
 
@@ -33,9 +33,14 @@
   display: flex;
   align-items: center;
   text-transform: uppercase;
+  color: #FFF;
 
   svg {
-    fill: $grey2;
+    fill: #FFF;
+  }
+
+  a {
+    color: #FFF;
   }
 
   span {
@@ -72,8 +77,11 @@
   &.active {
     font-weight: 400;
     padding-left: 66px;
-    color: $accent;
+    color: #FFF;
     border-left: 4px solid $accent;
+    .itemCount {
+      color: #FFF;
+    }
   }
 
   .itemCount {
