Ability to view and add relations.

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,8 +14,8 @@ $grey3: #B9B9C8;
 $grey4: #5B5F64;
 $grey5: #171A1F;
 $grey6: #192121;
-
 $headerHeight: 66px;
 
 $newGrey3: #1B1F25;
 $newGrey2: #F3F3F6;
+$newGrey1: #F3F3F3;
