--- a/src/views/RelationsView/CreateRelationPopup.scss
+++ b/src/views/RelationsView/CreateRelationPopup.scss
@@ -22,7 +22,7 @@
 .name {
   display: flex;
   align-items: center;
-  padding: 30px 0 15px 60px;
+  padding: 30px 60px 15px 60px;
   font-size: 35px;
   color: #fff;
 
@@ -30,6 +30,7 @@
     color: inherit;
     background: inherit;
     border: 0;
+    width: 100%;
   }
 }
 
@@ -43,6 +44,7 @@
     color: inherit;
     background: inherit;
     border: 0;
+    width: 100%;
   }
 }
 
