--- a/src/views/RelationsView/RelationRow.scss
+++ b/src/views/RelationsView/RelationRow.scss
@@ -6,6 +6,12 @@
   color: $newGrey3;
   padding: 30px 24px;
   border-bottom: 1px solid $newGrey2;
+  cursor: hand;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $newGrey1
+  }
 
   input {
     margin-right: 20px;
@@ -40,7 +46,11 @@
   cursor: pointer;
 
   svg {
-    fill: $newGrey3;
+    fill: $grey3;
+
+    &:hover {
+      fill: $newGrey3;
+    }
   }
 
 }
