--- a/src/views/models/StructureView/StructureView.scss
+++ b/src/views/models/StructureView/StructureView.scss
@@ -29,6 +29,12 @@
   }
 }
 
+.relationHeader {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 28px 40px 12px 40px;
+}
+
 .menuDropdown {
   @include dropdown;
   top: 46px;
