--- a/src/views/RelationsView/RelationsView.scss
+++ b/src/views/RelationsView/RelationsView.scss
@@ -1,4 +1,5 @@
 @import '~styles/variables';
+@import '~styles/mixins';
 
 .root {
   width: 100%;
@@ -15,4 +16,29 @@
 .header {
   cursor: pointer;
   cursor: hand;
+  display: inline-block;
+}
+
+.button {
+  @include button;
+  margin-left: 10px;
+
+  &.green {
+    border-color: $accent;
+    color: $accent;
+    background: #fff;
+
+    &:hover {
+      background: $accent;
+      color: #fff;
+
+      svg {
+        fill: #fff;
+      }
+    }
+
+    svg {
+      fill: $accent;
+    }
+  }
 }
