--- a/src/views/models/StructureView/StructureView.scss
+++ b/src/views/models/StructureView/StructureView.scss
@@ -32,7 +32,19 @@
 .relationHeader {
   font-size: 20px;
   font-weight: 600;
-  margin: 28px 40px 12px 40px;
+  padding: 20px 40px 20px 40px;
+  border-bottom: 1px solid $grey2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.noRelations {
+  width: 100%;
+  text-align: center;
+  color: $grey3;
+  font-style: italic;
+  margin-top: 20px;
 }
 
 .menuDropdown {
