Password fields are stars now :D

--- a/src/views/models/BrowserView/Cell/NullableCell.scss
+++ b/src/views/models/BrowserView/Cell/NullableCell.scss
@@ -1,6 +1,10 @@
 @import '~styles/variables';
 @import '~styles/mixins';
 
+.root {
+  width: 100%;
+}
+
 .button {
   position: absolute;
   top: 0;
