--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -32,6 +32,41 @@
     border: 0;
     width: 100%;
   }
+  svg {
+    fill: rgba(255,255,255,0.8);
+  }
+  &.alert {
+    svg {
+      animation: tada 3s infinite;
+    }
+  }
+}
+
+@keyframes tada {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  3.33%, 6.66% {
+    -webkit-transform: scale3d(.8, .8, .8) rotate3d(0, 0, 1, -3deg);
+    transform: scale3d(.8, .8, .8) rotate3d(0, 0, 1, -3deg);
+  }
+
+  10%, 16.66%, 23.33%, 30% {
+    -webkit-transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, 3deg);
+    transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, 3deg);
+  }
+
+  13.33%, 20%, 26.66% {
+    -webkit-transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, -3deg);
+    transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, -3deg);
+  }
+
+  33.33% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
 
 .description {
