SystemTokens are now shown!

--- a/src/views/ProjectSettingsView/ProjectSettingsView.scss
+++ b/src/views/ProjectSettingsView/ProjectSettingsView.scss
@@ -84,6 +84,11 @@
   }
 }
 
+.tokens {
+  display: inline-flex;
+  flex-direction: column;
+}
+
 .button {
   @include button;
   display: inline-block;
