--- a/src/views/models/BrowserView/Cell/ScalarListCell.scss
+++ b/src/views/models/BrowserView/Cell/ScalarListCell.scss
@@ -45,6 +45,13 @@
   cursor: pointer;
   border-bottom: 1px solid $grey2;
 
+  textarea {
+    height: 50px;
+    position: relative;
+    left: 0;
+    top: 0;
+  }
+
   &:hover {
     background: $newGrey2;
   }
