--- a/src/views/ProjectRootView/SideNav.scss
+++ b/src/views/ProjectRootView/SideNav.scss
@@ -26,6 +26,40 @@
   }
 }
 
+.newModelContainer {
+
+  margin-top: 20px;
+  transition: height 0.2s;
+
+  &.notToggled {
+    height: 0px;
+  }
+
+  &:hover {
+    background: none;
+  }
+  @extend .listStructure;
+
+  .newModelBox {
+    border-radius: 5px;
+    background-color: white;
+    width: 100%;
+    margin: 5px 0;
+    padding: 5px;
+    transition: padding 0.2s, height 0.2s;
+    border: 0;
+    
+    &.invalid {
+      background-color: pink;
+    }
+
+    &.notToggled {
+      height: 0;
+      padding: 0;
+    }
+  }
+}
+
 .head {
   font-size: 12px;
   font-weight: 400;
@@ -111,7 +145,7 @@
   padding: 0 0 33px 0;
 }
 
-.listElement {
+.listStructure {
   width: 100%;
   height: 33px;
   display: flex;
@@ -123,7 +157,12 @@
   font-weight: 300;
   cursor: hand;
   cursor: pointer;
+}
 
+.listElement {
+
+  @extend .listStructure;
+  
   &:hover {
     background: rgba(255, 255, 255, 0.09);
   }
@@ -199,6 +238,11 @@
   display: inline-block;
 
   &:hover {
+    background: #fff;
+    color: $grey4;
+  }
+
+  &.addActive {
     background: #fff;
     color: $grey4;
   }
