--- a/src/views/models/BrowserView/Cell/ScalarListCell.scss
+++ b/src/views/models/BrowserView/Cell/ScalarListCell.scss
@@ -27,6 +27,17 @@
   svg {
     fill: #fff
   }
+
+  .setNull {
+    cursor: pointer;
+    cursor: hand;
+
+    &:hover {
+      svg {
+        fill: #D0021B;
+      }
+    }
+  }
 }
 
 .list {
@@ -79,11 +90,18 @@
     position: absolute;
     right: 35px;
   }
+  svg {
+    fill: #4A90E2;
+  }
 
 }
 
 .existing {
-  padding: 35px;
+  padding: 0 35px;
+
+  svg {
+    fill: #D0021B;
+  }
 }
 
 .footer {
