Fixed bug, where filter on relations break things

--- a/src/views/models/BrowserView/HeaderCell.scss
+++ b/src/views/models/BrowserView/HeaderCell.scss
@@ -55,6 +55,13 @@
       opacity: 1;
     }
   }
+
+  .noFilter {
+    text-align: center;
+    font-size: 12px;
+    color: $grey3;
+    font-style: italic;
+  }
 }
 
 .fieldName {
