--- a/src/views/ActionsView/ActionRow.scss
+++ b/src/views/ActionsView/ActionRow.scss
@@ -7,6 +7,13 @@
   padding: 30px 24px;
   border-bottom: 1px solid $newGrey2;
 
+  cursor: hand;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $newGrey1;
+  }
+
   input {
     margin-right: 20px;
   }
