--- a/src/views/ActionsView/ActionTriggerBox.scss
+++ b/src/views/ActionsView/ActionTriggerBox.scss
@@ -2,7 +2,6 @@
 
 .root {
   width: 100%;
-  height: 100%;
   overflow: hidden;
   background: #fff;
 }
@@ -16,6 +15,22 @@
 
 .editor {
   width: 100%;
+}
+
+.noQuery {
+  font-size: 16px;
+  padding: 60px;
+  color: #8E96A3;
+  text-align: center;
+}
+
+.info {
+  width: 100%;
+  font-size: 15px;
+  color: #8E96A3;
+  padding: 16px;
+  line-height: 20px;
+  text-align: center;
 }
 
 .head {
