--- a/src/views/ProjectRootView/SideNav.scss
+++ b/src/views/ProjectRootView/SideNav.scss
@@ -187,6 +187,12 @@
   background: #238F50;
   padding: 30px 0;
   font-size: 14px;
+  color: white;
+
+  .gettingStartedTitle {
+    @extend .head;
+    color: white;
+  }
 
   .gettingStartedList {
     padding: 20px 70px 0;
@@ -203,6 +209,7 @@
 
   .gettingStartedStepActive a {
     font-weight: 600;
+    color: white;
   }
 
   .gettingStartedStepDone a {
