--- a/src/views/ActionsView/ActionTrigger.scss
+++ b/src/views/ActionsView/ActionTrigger.scss
@@ -7,6 +7,9 @@
   &.modelselector {
     background-color: rgba(228, 228, 244, 0.5);
     color: #4A90E2;
+    border-radius: 0;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 
     &.selected {
       color: #8E96A3;
@@ -16,6 +19,9 @@
   &.typeselector {
     background-color: #8E96A3;
     color: #FFFFFF;
+    border-radius: 0;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 
     &.selecting {
       background-color: #4A90E2;
