Initial version of looking for data works in the data browser

--- a/src/views/models/BrowserView/BrowserView.scss
+++ b/src/views/models/BrowserView/BrowserView.scss
@@ -110,15 +110,8 @@ $tableHeadExpanded: 100px;
   }
 
   .tableContainer {
-    height: 100%;
+    height: calc(100% - #{$tableHead});
     min-width: 100%;
-  }
-
-  .tableHead {
-    margin-top: -1px;
-    height: $tableHead;
-    display: flex;
-    width: 100%;
   }
 
   .tableBody {
