--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -11,6 +11,7 @@
   height: 47px;
   position: relative;
   text-overflow: ellipsis;
+  cursor: pointer;
 
   .value {
     text-overflow: ellipsis;
