relation popup modelselector

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,6 +16,9 @@ $grey5: #171A1F;
 $grey6: #192121;
 $headerHeight: 66px;
 
+$newGrayDark: #8E96A3;
+$newGrey4: #E4E4F4;
+
 $newGrey3: #1B1F25;
 $newGrey2: #F3F3F6;
 $newGrey1: #F3F3F3;
