--- a/src/views/RelationsView/ModelSelector.scss
+++ b/src/views/RelationsView/ModelSelector.scss
@@ -2,71 +2,107 @@
 @import '~styles/mixins';
 
 .root {
-  display: flex;
-  align-items: center;
-  user-select: none;
+  position: relative;
 
-  a {
-    cursor: hand;
-    cursor: pointer;
-    margin-right: 8px;
-    text-decoration: underline;
-    font-size: 12px;
-
-    &:hover {
-      text-decoration: none;
-      color: $grey4;
-    }
+  select {
+    text-align: center;
+    background: transparent;
+    border: 0;
+    appearance: none;
+    padding: 16px;
   }
 
-  .model {
-    font-size: 14px;
-    color: $grey3;
-    border: 1px solid $grey3;
-    padding: 2px 4px;
-    border-radius: 3px;
-    cursor: hand;
+  &.isMany {
+    &:before, &:after {
+      content: "";
+      border: 2px solid $newGrey4;
+      position: absolute;
+      width: calc(100% - 8px);
+      border-radius: 4px;
+      background: #fff;
+      height: 8px;
+      bottom: -4px;
+      left: 4px;
+      z-index: 2;
+    }
+
+    &:after {
+      width: calc(100% - 16px);
+      left: 8px;
+      bottom: -8px;
+      z-index: 1;
+    }
+  }
+}
+
+.rootContainer {
+  border: 2px solid $newGrey4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  user-select: none;
+  border-radius: 4px;
+  position: relative;
+  z-index: 3;
+  background: #fff;
+}
+
+.sizeToggle {
+  display: flex;
+  // border-bottom: 1px solid $newGrey4;
+  width: 100%;
+  padding: 3px;
+
+  div {
+    width: 50%;
+    text-transform: uppercase;
+    padding: 7px;
+    box-sizing: border-box;
+    text-align: center;
+    font-weight: bold;
     cursor: pointer;
-    display: flex;
+    color: darken($newGrey4, 10%);
+    flex: 0 0 auto;
+    font-size: 12px;
+  }
+  .active {
+    background: $newGrey4;
+    color: lighten($newGrayDark, 5%);
+    border-radius: 2px;
+    cursor: default;
+  }
+}
 
-    &:hover {
-      border: 1px solid $grey4;
-      color: $grey4;
-    }
+.modelSelect {
 
-    select {
-      text-align: center;
-      background: transparent;
-      border: 0;
-      appearance: none;
-      padding: 16px;
-    }
-
-    span {
-      appearance: none;
-      height: 44px;
-      background: $grey2;
-      border: 0;
-      font-size:12px;
-      text-transform: uppercase;
-      color: $grey4;
-      width: 100px;
-      border-radius: 5px;
-      padding: 4px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  position: relative;
 
 
-      .fieldTitle {
-        background: transparent;
-      }
+  &:after {
+    content: "";
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translate(0, -50%);
+    border-style: solid;
+    border-width: 6px 4px 0 4px;
+    border-color: $newGrayDark transparent transparent transparent;
+  }
+  select {
+    cursor: pointer;
+    color: $newGrayDark;
+    // font-weight: bold;
+    line-height: 1.5;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 10px 0 0;
+    font-size: 20px;
 
-      input {
-        font-size: 13px;
-        border: 0;
-        color: $grey5;
-        background: transparent;
-        width: 100px;
-        padding: 4px 8px 4px 4px;
-      }
+    option {
+      font-size: 16px;
     }
   }
 }
