--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -115,6 +115,31 @@
   }
 }
 
+.additionalInfo {
+  display: flex;
+  font-size: 12px;
+
+  .tabbutton {
+    cursor: pointer;
+    padding: 20px;
+    display: flex;
+
+    svg {
+      fill: $grey3;
+    }
+
+    .tabheader {
+      margin-left: 12px;
+      text-transform: uppercase;
+      user-select: none;
+    }
+
+    &.active {
+      background-color: rgba(228, 228, 244, 0.25);
+    }
+  }
+}
+
 .buttons {
   display: flex;
   width: 100%;
