--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -11,7 +11,8 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 70%;
+  // height: 70%;
+  width: 100%;
 }
 
 .header {
@@ -90,17 +91,20 @@
   flex-direction: column;
   color: $grey3;
   justify-content: center;
+  padding: 30px;
 
   .title {
     text-transform: uppercase;
-    padding: 0 60px 0 60px;
+    // margin-bottom: 60px;
+    // padding: 0;
   }
 
   .settings {
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 20px;
+    padding: 60px 0;
+    // padding: 30px;
     justify-content: center;
 
     .iconContainer {
