--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -3,8 +3,10 @@
 
 .root {
   width: 700px;
-  height: 100%;
+  // height: 100%;
   background: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -13,28 +15,41 @@
   flex-direction: column;
   // height: 70%;
   width: 100%;
+  flex: 0 0 auto;
 }
 
 .header {
   background: #27AE60;
-  height: 30%;
+  // height: 30%;
+  padding: 50px;
+  font-size: 35px;
+  color: #fff;
 }
 
 .name {
+
   display: flex;
   align-items: center;
-  padding: 30px 60px 15px 60px;
-  font-size: 35px;
-  color: #fff;
+  padding: 30px;
+
+  label {
+    font-size: 20px;
+    margin-right: 30px;
+  }
 
   input {
-    color: inherit;
-    background: inherit;
+    flex: 1 0 auto;
+    color: $newGrayDark;
+    font-size: 20px;
+    background: rgba($newGrey4, 0.5);
     border: 0;
-    width: 100%;
+    // width: 100%;
+    padding: 15px;
+    font-weight: bold;
   }
   svg {
-    fill: rgba(255,255,255,0.8);
+    fill: rgba($newGrayDark, 0.5);
+    margin-left: 30px;
   }
   &.alert {
     svg {
@@ -74,7 +89,7 @@
   display: flex;
   align-items: center;
   padding: 0 60px 20px 60px;
-  color: #fff;
+  color: $newGrayDark;
 
   input {
     color: inherit;
@@ -85,27 +100,29 @@
 }
 
 .content {
-  flex-grow: 1;
+  flex: 1 0 auto;
   display: flex;
   align-items: left;
   flex-direction: column;
   color: $grey3;
   justify-content: center;
-  padding: 30px;
+  padding: 30px 0;
 
   .title {
     text-transform: uppercase;
     // margin-bottom: 60px;
     // padding: 0;
+    padding: 0 30px;
   }
 
   .settings {
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 60px 0;
+    padding: 30px 30px 60px;
     // padding: 30px;
     justify-content: center;
+    border-bottom: 1px solid $newGrey4;
 
     .iconContainer {
       display: inline-block;
@@ -144,26 +161,28 @@
   }
 }
 
+
+
 .buttons {
   display: flex;
   width: 100%;
   justify-content: space-between;
   user-select: none;
   background-color: $newGrey1;
+  padding: 30px;
 
   div {
     cursor: pointer;
     cursor: hand;
-    margin: 12px 60px;
-    padding: 12px 24px;
-
-
+    padding: 15px 15px;
+    color: $newGrayDark;
   }
 
   .submit {
+    padding: 15px 50px;
     border: 1px solid $grey3;
     color: $grey3;
-    border-radius: 5px;
+    // border-radius: 5px;
 
     &.valid {
       cursor: pointer;
