--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -3,7 +3,7 @@
 
 .root {
   width: 700px;
-  // height: 100%;
+  height: 100%;
   background: #fff;
   display: flex;
   flex-direction: column;
@@ -15,13 +15,14 @@
   flex-direction: column;
   // height: 70%;
   width: 100%;
-  flex: 0 0 auto;
+  flex: 1;
+  overflow: scroll;
 }
 
 .header {
   background: #27AE60;
   // height: 30%;
-  padding: 50px;
+  padding: 40px 30px;
   font-size: 35px;
   color: #fff;
 }
@@ -106,7 +107,7 @@
   flex-direction: column;
   color: $grey3;
   justify-content: center;
-  padding: 30px 0;
+  padding: 30px 0 0 0;
 
   .title {
     text-transform: uppercase;
