--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -52,44 +52,12 @@
     fill: rgba($newGrayDark, 0.5);
     margin-left: 30px;
   }
-  &.alert {
-    svg {
-      animation: tada 3s infinite;
-    }
-  }
-}
-
-@keyframes tada {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-
-  3.33%, 6.66% {
-    -webkit-transform: scale3d(.8, .8, .8) rotate3d(0, 0, 1, -3deg);
-    transform: scale3d(.8, .8, .8) rotate3d(0, 0, 1, -3deg);
-  }
-
-  10%, 16.66%, 23.33%, 30% {
-    -webkit-transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, 3deg);
-    transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, 3deg);
-  }
-
-  13.33%, 20%, 26.66% {
-    -webkit-transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, -3deg);
-    transform: scale3d(1.2, 1.2, 1.2) rotate3d(0, 0, 1, -3deg);
-  }
-
-  33.33% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
 }
 
 .description {
   display: flex;
   align-items: center;
-  padding: 0 60px 20px 60px;
+  padding: 0 120px 20px 60px;
   color: $newGrayDark;
 
   input {
@@ -135,16 +103,26 @@
       margin: 0 8px;
     }
   }
+
+  .descriptors {
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 .additionalInfo {
   display: flex;
   font-size: 12px;
+  z-index: 1;
 
   .tabbutton {
     cursor: pointer;
     padding: 20px;
     display: flex;
+    border: 1px solid transparent;
 
     svg {
       fill: $grey3;
@@ -157,6 +135,10 @@
     }
 
     &.active {
+      border-top: 1px solid #e4e4f4;
+      border-right: 1px solid #e4e4f4;
+      border-bottom: 1px solid #F8F8FC;
+      border-left: 1px solid #e4e4f4;
       background-color: rgba(228, 228, 244, 0.25);
     }
   }
@@ -165,6 +147,7 @@
 
 
 .buttons {
+  border-top: 1px solid #e4e4f4;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -198,4 +181,9 @@
       }
     }
   }
+}
+
+.explanation {
+  border-top: 1px solid #e4e4f4;
+  margin-top: -1px;
 }
