--- a/src/views/RelationsView/RelationPopup.scss
+++ b/src/views/RelationsView/RelationPopup.scss
@@ -13,7 +13,6 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  // height: 70%;
   width: 100%;
   flex: 1;
   overflow: scroll;
@@ -21,7 +20,6 @@
 
 .header {
   background: #27AE60;
-  // height: 30%;
   padding: 40px 30px;
   font-size: 35px;
   color: #fff;
@@ -32,6 +30,7 @@
   display: flex;
   align-items: center;
   padding: 30px;
+  border-top: 1px solid $newGrey4;
 
   label {
     font-size: 20px;
@@ -44,7 +43,6 @@
     font-size: 20px;
     background: rgba($newGrey4, 0.5);
     border: 0;
-    // width: 100%;
     padding: 15px;
     font-weight: bold;
   }
@@ -79,8 +77,6 @@
 
   .title {
     text-transform: uppercase;
-    // margin-bottom: 60px;
-    // padding: 0;
     padding: 0 30px;
   }
 
@@ -89,9 +85,7 @@
     align-items: center;
     width: 100%;
     padding: 30px 30px 60px;
-    // padding: 30px;
     justify-content: center;
-    border-bottom: 1px solid $newGrey4;
 
     .iconContainer {
       display: inline-block;
@@ -166,7 +160,6 @@
     padding: 15px 50px;
     border: 1px solid $grey3;
     color: $grey3;
-    // border-radius: 5px;
 
     &.valid {
       cursor: pointer;
