--- a/src/views/RelationsView/RelationModels.scss
+++ b/src/views/RelationsView/RelationModels.scss
@@ -2,13 +2,47 @@
 @import '~styles/mixins';
 
 .model {
+  position: relative;
+
+  &.isMany {
+    &:before, &:after {
+      content: "";
+      border: 1px solid $grey3;
+      position: absolute;
+      width: calc(100% - 6px);
+      border-radius: 4px;
+      height: 6px;
+      background-color: #fff;
+      bottom: -5px;
+      left: 3px;
+      z-index: 2;
+
+    }
+
+    &:after {
+      width: calc(100% - 12px);
+      left: 6px;
+      bottom: -8px;
+      z-index: 1;
+    }
+    &:hover::before, &:hover::after {
+      border: 1px solid $grey4;
+      color: $grey4;
+    }
+  }
+}
+
+.modelContainer {
+  position: relative;
   font-size: 14px;
   color: $grey3;
   border: 1px solid $grey3;
   padding: 2px 4px;
   border-radius: 3px;
+  background-color: #fff;
   cursor: hand;
   cursor: pointer;
+  z-index: 3;
 
   &:hover {
     border: 1px solid $grey4;
