Stubbed out PlaygroundAPopup with basic content and styling

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -595,6 +595,25 @@
     border-radius: 2px;
   }
 
+  /* Border color
+  –––––
+  */
+  .bc-grey-1 {
+    border-color: var(--color-gray-1);
+  }
+
+  .bc-grey-2 {
+    border-color: var(--color-gray-2);
+  }
+
+  .bc-grey-3 {
+    border-color: var(--color-gray-3);
+  }
+
+  .bc-grey-4 {
+    border-color: var(--color-gray-4);
+  }
+
   /* Line height
   –––––
    */
