--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -44,6 +44,7 @@
 
   // tachyons extension
   :root {
+    --color-blue: #4A90E2;
     --color-accent: #00B861;
     --color-gray-1: #F1F1F1;
     --color-gray-2: #C8C8C8;
@@ -476,6 +477,14 @@
   –––––
    */
 
+  .bg-accent {
+     background-color: var(--color-accent);
+  }
+
+  .blue {
+    color: var(--color-blue);
+  }
+
   .gray-04 {
     color: var(--gray-04);
   }
@@ -511,7 +520,7 @@
   }
 
   .bg-gray-04 {
-    background-color: var(--gray-04);
+    bg-color: var(--gray-04);
   }
   .bg-gray-06 {
     background-color: var(--gray-06);
