Prepared new onboarding - pt2

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -630,4 +630,15 @@
     line-height: 1.4;
   }
 
+  /* Letter spacing
+  –––––
+   */
+  .ls-1 {
+    letter-spacing: 1px;
+  }
+
+  .ls-2 {
+    letter-spacing: 2px;
+  }
+
 }
