--- a/src/components/onboarding/PlaygroundCPopup/PlaygroundCPopup.scss
+++ b/src/components/onboarding/PlaygroundCPopup/PlaygroundCPopup.scss
@@ -24,3 +24,46 @@
     background-color: $accent;
   }
 }
+
+.guides {
+  div {
+    display: flex;
+    align-items: center;
+    font-weight: 100;
+    padding-bottom: 16px;
+
+    &:before {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 0 0 auto;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1;
+      margin-right: 10px;
+      height: 29px;
+      width: 29px;
+      border: 1px solid gray;
+      border-radius: 29px;
+      background: rgba(74,74,74,0.04);
+    }
+  }
+}
+
+.one {
+  &:before {
+    content: '1';
+  }
+}
+
+.two {
+  &:before {
+    content: '2';
+  } 
+}
+
+.three {
+  &:before {
+    content: '3';
+  }
+}
