WIP new databrowser

--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -96,3 +96,12 @@
     @include cellborder($accent-blue);
   }
 }
+
+.selected {
+  background-color: #4A90E2;
+  color: #fff;
+  input {
+    color: #fff !important;
+  }
+}
+
