--- a/src/views/models/BrowserView/HeaderCell.scss
+++ b/src/views/models/BrowserView/HeaderCell.scss
@@ -4,7 +4,6 @@
 .root {
   padding: 0 20px;
   height: 100%;
-  @include cellborder($grey2);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -86,7 +85,11 @@
     font-size: 14px;
     font-weight: 300;
     color: $grey3;
-    margin-left: 4px;
+    margin-left: 6px;
+    border-radius: 2px;
+    padding: 4px 5px 2px 5px;
+    background-color: rgba(0,0,0,.05);
+    font-family: Consolas, Monospaced;
   }
 
   .edit {
