--- a/src/views/models/BrowserView/CheckboxCell.scss
+++ b/src/views/models/BrowserView/CheckboxCell.scss
@@ -2,10 +2,28 @@
 @import '~styles/mixins';
 
 .root {
-  @include cellborder($grey2);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+
+  .border {
+    border: 1px solid rgba(0,0,0,.08);
+    height: 15px;
+    width: 15px;
+    border-radius: 8px;
+  }
+
+  .dot {
+    background-color: #4A90E2;
+    height: 15px;
+    width: 15px;
+    border-radius: 8px;
+    opacity: 0;
+  }
+
+  .active {
+    opacity: 1;
+  }
 }
