--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -12,6 +12,7 @@
   position: relative;
   text-overflow: ellipsis;
   cursor: pointer;
+  background-color: #fff;
 
   .value {
     text-overflow: ellipsis;
