--- a/src/views/models/BrowserView/DataActionRow/DeleteNodeRow.scss
+++ b/src/views/models/BrowserView/DataActionRow/DeleteNodeRow.scss
@@ -10,24 +10,24 @@
 }
 
 .button {
-  @include button;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-right: 8px;
+  padding: 7px;
+  border-radius: 2px;
+  cursor: pointer;
+
+  color: rgba(0,0,0,.4);
 
   &.red {
     border-color: rgb(208, 2, 27);
-    color: rgb(208, 2, 27);
-    background: #fff;
-
-    &:hover {
-      background: rgb(208, 2, 27);
-      color: #fff;
-
-      svg {
-        fill: #fff;
-      }
-    }
+    color: #fff;
+    background: rgb(208, 2, 27);
 
     svg {
       fill: rgb(208, 2, 27);
     }
   }
 }
+
