--- a/src/views/models/BrowserView/NewRowInactive.scss
+++ b/src/views/models/BrowserView/NewRowInactive.scss
@@ -17,8 +17,7 @@
   background-position: top, left;
   background-size: 12px 1px, 1px 12px;
   background-repeat: repeat-x, repeat-y;
-  border-bottom: 1px solid #e4e4f4;
-
+  box-shadow:0px 1px 1px #e4e4f4;
 }
 
 .last {
