more beautiful search animation

--- a/src/views/models/BrowserView/BrowserView.scss
+++ b/src/views/models/BrowserView/BrowserView.scss
@@ -21,6 +21,7 @@ $tableHeadExpanded: 100px;
   margin-left: 10px;
   cursor: pointer;
   transition: .3s all;
+  overflow: hidden;
 
   &.search {
     display: flex;
