--- a/src/views/ProjectRootView/SideNav.scss
+++ b/src/views/ProjectRootView/SideNav.scss
@@ -1,29 +1,24 @@
 @import '~styles/variables';
 
-.root {
-  width: 100%;
-  height: 100%;
-  background: $grey5;
-  position: relative;
-  color: #fff;
-
-  a {
-    color: $grey3;
-  }
-}
+//.root {
+//  a {
+//    color: $white30;
+//    font-weight: 400
+//  }
+//}
 
 .container {
-  height: 100%;
   padding-bottom: 62px;
 }
 
 .listBlock {
-  margin: 0 0 10px;
-  padding: 27px 0;
+  padding: 0 0 $size38;
 
-  &.active {
-    background: #1B1F25;
-  }
+  //&.active {
+  //  .head {
+  //
+  //  }
+  //}
 }
 
 .newModelContainer {
@@ -61,32 +56,33 @@
 }
 
 .head {
-  font-size: 12px;
-  font-weight: 400;
-  padding: 0 26px;
+  letter-spacing: 1px;
+  padding: 0 $size25;
   display: flex;
   align-items: center;
   text-transform: uppercase;
-  color: #FFF;
+  font-weight: 600;
+  color: $white60;
 
   svg {
-    fill: #FFF;
+    fill: $white60;
   }
 
-  a {
-    color: #FFF;
-  }
+  //a {
+  //  color: $white30;
+  //  font-weight: 400;
+  //}
 
-  span {
-    padding: 0 25px;
-  }
+  //span {
+  //  margin-left ;
+  //}
 
-  &.active {
-    color: $accent;
-    svg {
-      fill: $accent;
-    }
-  }
+  //&.active {
+  //  color: #fff;
+  //  svg {
+  //    fill: #fff;
+  //  }
+  //}
 }
 
 .list {
@@ -239,19 +235,9 @@
 }
 
 .add {
-  margin: 0 0 0 70px;
-  font-size: 12px;
-  font-weight: 600;
-  cursor: pointer;
-  text-transform: uppercase;
-  border: 1px solid #fff;
-  border-radius: 4px;
-  padding: 9px 19px;
-  display: inline-block;
 
   &:hover {
-    background: #fff;
-    color: $grey4;
+    border-color: #fff;
   }
 
   &.addActive {
@@ -268,11 +254,11 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  background: $grey6;
-
-  &:hover {
-    background: #363E3E;
-  }
+  //background: $grey6;
+  //
+  //&:hover {
+  //  background: #363E3E;
+  //}
 
   span {
     text-transform: uppercase;
